--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Station</title>
+    <title>Dashboard</title>
 
+    <link rel="icon" type="image/png" href="./img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100..800&display=swap" rel="stylesheet">
@@ -17,7 +18,7 @@
 
 <body class="d-flex align-items-center justify-content-center">
 
-    <div x-data="smartStation()" x-init="initApp()" class="container-fluid" style="display: none;" x-show="true">
+    <div x-data="smartStation()" x-init="initApp()" class="container-fluid" @click="toggleFullscreen()" style="display: none;" x-show="true">
         
         <div class="row justify-content-center text-center">
             
