--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="./img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Doto:wght@100..900&display=swap" rel="stylesheet">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -28,13 +28,13 @@
             </div>
 
             <div class="col-12 status-bar mt-4">
-                <span class="badge rounded-pill border border-secondary text-secondary bg-transparent mx-1">
-                    <i class="bi bi-circle-fill small-dot"></i> ONLINE
+                <span class="fs-4 badge rounded-pill border border-secondary text-secondary bg-transparent mx-1">
+                    <i class="bi bi-circle-fill medium-dot"></i> ONLINE
                 </span>
                 
-                <template x-if="batteryLevel !== null">
-                    <span class="badge rounded-pill border border-secondary text-secondary bg-transparent mx-1">
-                        <i class="bi bi-battery-half"></i> 
+                <template x-if="batteryLevel !== null ">
+                    <span class="fs-4 badge rounded-pill border border-secondary text-secondary bg-transparent mx-1">
+                        <i class="bi bi-battery-full"></i> 
                         <span x-text="batteryLevel + '%'"></span>
                     </span>
                 </template>
