--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body class="d-flex align-items-center justify-content-center">
-
+    <div id="floating-indicator"></div>
     <div x-data="smartStation()" x-init="initApp()" class="container-fluid" @click="toggleFullscreen()" style="display: none;" x-show="true">
         
         <div class="row justify-content-center text-center">
