--- a/pixels.html
+++ b/pixels.html
@@ -85,12 +85,11 @@
     <!-- Módulos de Efectos -->
     <script type="module" src="js/effects/color_plasma.js"></script>
     <script type="module" src="js/effects/digital_clock.js"></script>
+    <script type="module" src="js/effects/expanding_circle.js"></script>
     <script type="module" src="js/effects/matrix_rain.js"></script>
-    <script type="module" src="js/effects/oscillating_line.js"></script>
-    <script type="module" src="js/effects/expanding_circle.js"></script>
-    <script type="module" src="js/effects/spectrum_analyzer.js"></script>
+    <script type="module" src="js/effects/key_tester.js"></script>
     <script type="module" src="js/effects/scrolling_marquee.js"></script>
-    <script type="module" src="js/effects/expanding_circle.js"></script>
+    <script type="module" src="js/effects/spectrum_analyzer.js"></script>
     
     <script type="module">
         import { initializeDisplay, detectAndSetDimensions } from './js/core.js'; 
