--- a/pixels.html
+++ b/pixels.html
@@ -103,6 +103,8 @@
     <script type="module" src="js/effects/spectrum_analyzer.js"></script>
     <script type="module" src="js/effects/fireworks.js"></script>
     <script type="module" src="js/effects/clock_fireworks.js"></script> 
+    <script type="module" src="js/effects/led_tracker.js"></script>
+    <script type="module" src="js/effects/tetris_clock.js"></script>
     <!-- Eliminé led_tracker de aquí si no se usa, o asegúrate de que el archivo exista -->
     
     <script type="module">
