--- a/pixels.html
+++ b/pixels.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pixel Display Visual Completo y Adaptable</title>
+    <title>Pixel Display by Bksp</title>
     <link rel="icon" type="image/png" href="./img/favicon.png">
     <style>
         /* --- CONSTANTES DEL DISPLAY --- */
@@ -99,14 +99,16 @@
     <script type="module" src="js/effects/expanding_circle.js"></script>
     <script type="module" src="js/effects/matrix_rain.js"></script>
     <script type="module" src="js/effects/key_tester.js"></script>
+    <script type="module" src="js/effects/led_tracker.js"></script>
     <script type="module" src="js/effects/scrolling_marquee.js"></script>
     <script type="module" src="js/effects/spectrum_analyzer.js"></script>
     <script type="module" src="js/effects/fireworks.js"></script>
     <script type="module" src="js/effects/clock_fireworks.js"></script>
     <script type="module" src="js/effects/tetris_clock.js"></script> 
-    <!-- NUEVO EFECTO DONACIÓN -->
     <script type="module" src="js/effects/donation_qr.js"></script> 
-    
+    <script type="module" src="js/effects/arkanoid.js"></script> 
+    <script type="module" src="js/effects/space_invaders.js"></script> 
+
     <script type="module">
         import { initializeDisplay, detectAndSetDimensions } from './js/core.js'; 
         
