--- a/pixels.html
+++ b/pixels.html
@@ -11,22 +11,22 @@
     <meta property="og:description" content="Display interactivo de pixel art y efectos visuales retro.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://bksp.com.ar/dashboard">
-    <meta property="og:image" content="./img/icon-512.png">
+    <meta property="og:image" content="./assets/mockup.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Pixel Dashboard - Bksp">
     <meta name="twitter:description" content="Display interactivo de pixel art y efectos visuales retro.">
-    <meta name="twitter:image" content="./img/icon-512.png">
+    <meta name="twitter:image" content="./assets/mockup.png">
 
     <!-- PWA -->
     <link rel="manifest" href="./manifest.json">
     <meta name="theme-color" content="#000000">
-    <link rel="apple-touch-icon" href="./img/icon-192.png">
-    <link rel="icon" type="image/png" href="./img/favicon.png">
+    <link rel="apple-touch-icon" href="./assets/icon-192.png">
+    <link rel="icon" type="image/png" href="./assets/favicon.png">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="display-wrapper">
