--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta property="og:title" content="Dashboard - Bksp">
     <meta property="og:description" content="Dashboard interactivo con reloj, fecha y estado del sistema.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://bksp.com.ar/dashboard">
-    <meta property="og:image" content="./assets/mockup.png">
+    <meta property="og:url" content="https://bksp.github.io/DASHBOARD/index.html">
+    <meta property="og:image" content="https://bksp.github.io/DASHBOARD/assets/preview.png">
 
 
     <link rel="icon" type="image/png" href="./assets/favicon.png">
