--- a/pixels.html
+++ b/pixels.html
@@ -10,14 +10,14 @@
     <meta property="og:title" content="Pixel Dashboard - Bksp">
     <meta property="og:description" content="Display interactivo de pixel art y efectos visuales retro.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://bksp.com.ar/dashboard">
-    <meta property="og:image" content="./assets/mockup.png">
+    <meta property="og:url" content="https://bksp.github.io/DASHBOARD/pixels.html">
+    <meta property="og:image" content="https://bksp.github.io/DASHBOARD/assets/preview.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Pixel Dashboard - Bksp">
     <meta name="twitter:description" content="Display interactivo de pixel art y efectos visuales retro.">
-    <meta name="twitter:image" content="./assets/mockup.png">
+    <meta name="twitter:image" content="https://bksp.github.io/DASHBOARD/assets/preview.png">
 
     <!-- PWA -->
     <link rel="manifest" href="./manifest.json">
