--- a/pixels.html
+++ b/pixels.html
@@ -23,7 +23,7 @@
     <link rel="manifest" href="./manifest.json">
     <meta name="theme-color" content="#000000">
     <link rel="apple-touch-icon" href="./assets/icon-192.png">
-    <link rel="icon" type="image/png" href="./assets/favicon.png">
+    <link rel="icon" type="image/png" href="./assets/icon-192.png">
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
